Add Trie State v1 (#182)
* chore: Fix styling issues

* feat: Add State Trie v1 decoding and encoding logic

* feat: Add state trie decoding tests

* test: Add more encoding, decoding, proving tests

* chore: fix build errors

* Resolve TODOs and add more javadocs

* Resolve code style issues

* Revert timeout increase change

* Fix build issues

* Mention Gossamer

* Fix build issues

* Fix build issues